// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonElement renders a button with custom styles 1`] = `
<button
  className="css-100jsw4-ButtonElement btn btn-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "boxShadow": "none",
      "cursor": "pointer",
      "display": "flex",
      "justifyContent": "center",
      "maxWidth": "100%",
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <span
      className="css-1kxrhf3"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</button>
`;

exports[`ButtonElement renders a button with plain text 1`] = `
<button
  className="css-100jsw4-ButtonElement btn btn-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "boxShadow": "none",
      "cursor": "pointer",
      "display": "flex",
      "justifyContent": "center",
      "maxWidth": "100%",
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <span
      className="css-1kxrhf3"
      onClick={[Function]}
    >
      Hello World!
    </span>
  </div>
</button>
`;

exports[`ButtonElement renders an empty ButtonElement element 1`] = `
<button
  className="css-89fnp8-ButtonElement btn btn-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "boxShadow": "none",
      "cursor": "pointer",
      "display": "flex",
      "justifyContent": "center",
      "maxWidth": "100%",
    }
  }
  type="button"
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <span
      className="css-1kxrhf3"
      onClick={[Function]}
    >
      

    </span>
  </div>
</button>
`;
